# nlshade

./: CMakeLists.txt  Justfile  main.cpp  nlshade-original.cpp
cmake/config/: nlshade-config.cmake.in
include/: functions.h  types.h
include/nlshade/: nlshade.h
src/: CMakeLists.txt  nlshade.cpp  util.cpp  util.h
